# cplusplus_abv_zedat

./: .gitignore  README.md
projekte_ss2017/das_ziel_ist_der_weg/: README.md  build.sh  code.cpp
projekte_ss2017/das_ziel_ist_der_weg/bilder/: Thumbs.db
projekte_ss2017/sharkfighter/: Bullet.cpp  Bullet.h  CMakeLists.txt  CREDIT.txt  Enemy.cpp  Enemy.h  GameHandler.cpp  GameHandler.h  LICENSE.txt  Player.cpp  Player.h  README.md  build.sh  main.cpp
projekte_ss2017/snake/: README.md  build.sh  grafik.cpp  grafik.h  snake.cpp
projekte_ss2017/streetrunner/: README.md  StreetRunner.cpp  build.sh
projekte_ss2017/trojtris/: README.md  build.sh  main.cpp
projekte_ss2017/weltraumquiz/: README.md  build.sh  weltraumquiz.cpp
